src/test/ui/async-await/no-async-const.stderr
error: expected one of `fn` or `unsafe`, found `const`
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/no-async-const.rs:7:11
=======
  --> $DIR/no-async-const.rs:5:11
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL | pub async const fn x() {}
   |           ^^^^^ expected one of `fn` or `unsafe` here

error: aborting due to previous error

