src/test/ui/async-await/no-async-const.rs
// compile-fail
// edition:2018
// compile-flags: --crate-type lib

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
#![feature(async_await)]

=======
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
pub async const fn x() {}
//~^ ERROR expected one of `fn` or `unsafe`, found `const`
